# aur-tester

./: .dockerIgnore  .gitignore  CMakeLists.txt  Dockerfile  PKGBUILD  README.md  aur-tester.sh
.github/workflows/: main.yml
code/: CMakeLists.txt
code/include/: tester.h
include/: global.h  tester.h  utils.h
src/: CMakeLists.txt  difference.cpp  installPackage.cpp  main.cpp  runContainer.cpp  scanMalware.cpp  scanRootkit.cpp  tester.cpp
src/include/: utils.h
src/src/: main.cpp  makeCopy.cpp  scanMalware.cpp  scanRootkit.cpp  tester.cpp
src/utils/: global.cpp  utils.cpp
utils/: utils.cpp
